--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>Index</title>
 </head>
 <body>
     <h1>Hello</h1>
+    <a href="greeting">Greeting</a>
+    <a href="registration">Registration</a>
 </body>
 </html>
